[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vynus"
version = "0.0.1"
description = "A helper tool for scientific studies based on Jupyter notebooks"
authors = [{name="Sean Tseng", email="seantyh@gmail.com"}]
dependencies = [
  "nbformat",
]
